<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.Login.LoginFragment">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/iconapp"
        android:layout_margin="@dimen/_80dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/laProgressBar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.0">


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailTilLogin"
            style="@style/authInputTil"
            app:helperText="*"
            app:helperTextTextColor="@color/red">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ed_emailLogin"
                style="@style/authInput"
                android:background="@drawable/design_search"
                android:backgroundTint="@color/white"
                android:drawableStart="@drawable/outline_email_24"
                android:hint="@string/email" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passworrdTilLogin"
            style="@style/authInputTil"
            app:helperText="*"
            app:helperTextTextColor="@color/red"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ed_PasswordLogin"
                style="@style/authInput"
                android:autofillHints="Password"
                android:drawableStart="@drawable/outline_lock_24"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:text="@={loginViewModel.password}" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_login"
            style="@style/button_auth"
            android:text="@string/login" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_forgetPasswrod"
            android:layout_width="190dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:background="@drawable/design_search"
            android:drawableEnd="@drawable/outline_lock_24"
            android:text="@string/forget_password"
            android:layout_margin="@dimen/_30dp"
            android:textAllCaps="false"
            android:textColor="@color/black" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingEnd="@dimen/_10dp"
                android:text="@string/don_t_have_an_account"
                android:textColor="@color/black"
                android:textSize="@dimen/_15sp"
                android:textStyle="italic" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/btn_create_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right|bottom"
                android:layout_marginTop="@dimen/_20dp"
                android:text="@string/register"
                android:textAllCaps="false"
                android:textColor="@color/Indigo"
                android:textSize="@dimen/_15sp"
                android:textStyle="bold" />
        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.constraintlayout.widget.ConstraintLayout>