<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".HomeFragment"
        android:background="@color/Indigo">


        <TextView
            android:id="@+id/happyTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/happy_day"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="@dimen/_24sp"
            android:layout_marginTop="100dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/coverImageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="90dp"
            android:layout_marginHorizontal="@dimen/_24sp"
            android:src="@drawable/cover"
            app:layout_constraintTop_toBottomOf="@id/happyTxt" />

        <TextView
            android:id="@+id/starTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ur_a_star"
            android:textColor="@color/white"
            android:textSize="@dimen/_24sp"
            android:layout_marginTop="@dimen/_10dp"
            android:maxLines="1"
            android:ellipsize="marquee"
            android:padding="@dimen/_10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/coverImageView" />

        <Button
            android:id="@+id/startedBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:text="@string/get_started"
            android:textColor="@color/Indigo"
            android:layout_marginBottom="@dimen/_24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>